welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: illegal start of statement
        	for (a<-1 to 6) {avance(); if(estSurBiscuit()) {prendBiscuit();)}}
                                                                               ^